fix: remove the scrollbar

--- a/hangman/src/components/footer/footer.module.scss
+++ b/hangman/src/components/footer/footer.module.scss
@@ -1,6 +1,5 @@
 .footer__wrapper {
   max-width: 1240px;
-  width: 100%;
 
   padding: 20px;
   margin: 0 auto;
