--- a/hangman/src/components/header/header.module.scss
+++ b/hangman/src/components/header/header.module.scss
@@ -1,6 +1,5 @@
 .header__wrapper {
   max-width: 1240px;
-  width: 100%;
 
   padding: 20px;
   margin: 0 auto;
