--- a/hangman/src/components/main/main.module.scss
+++ b/hangman/src/components/main/main.module.scss
@@ -1,7 +1,6 @@
 .main__wrapper {
   max-width: 1240px;
   padding: 20px;
-  width: 100%;
   margin: 0 auto;
 }
 
